@@ -2132,6 +2132,26 @@
       </component>
     </version>
   </module>
+  <module name="gpdf">
+    <version release="gnome-1.4-extras">
+      <component name="gpdf" dir="gpdf">
+	<podir dir="po"/>
+	<potname name="gpdf.pot"/>
+	<branch name="gpdf-for-gnome-1-4"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+    <version release="gnome-2.1-extras">
+      <component name="gpdf" dir="gpdf">
+	<podir dir="po"/>
+	<potname name="gpdf.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gperfmeter">
     <version release="gnome-1.4-extras">
       <component name="gperfmeter" dir="gperfmeter">
@@ -3352,26 +3372,6 @@
       <component name="ximian-utils" dir="ximian-utils">
 	<podir dir="po"/>
 	<potname name="ximian-utils.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
-  <module name="gpdf">
-    <version release="gnome-1.4-extras">
-      <component name="gpdf" dir="gpdf">
-	<podir dir="po"/>
-	<potname name="gpdf.pot"/>
-	<branch name="gpdf-for-gnome-1-4"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-    <version release="gnome-2.1-extras">
-      <component name="gpdf" dir="gpdf">
-	<podir dir="po"/>
-	<potname name="gpdf.pot"/>
 	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
