@@ -1,5 +1,9 @@
 2003-02-09  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Sorted gpdf correctly.
+
+2003-02-09  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Removed gimp-perl.
 
 2003-02-09  Christian Rose  <menthos@menthos.com>
